--- a/DbFlexSurvey/SurveyWeb/Views/Question/RenderMultipleQuestion.cshtml
+++ b/DbFlexSurvey/SurveyWeb/Views/Question/RenderMultipleQuestion.cshtml
@@ -29,9 +29,9 @@
 
     foreach (var answer in Model.AnswerVariants)
     {
-        int maxLength = answer.SymbolCount;
+        int maxLength = Convert.ToInt32(answer.SymbolCount);
         int size = Math.Max(maxLength - 1, 1);
-        bool isNumeric = answer.IsNumeric;
+        bool isNumeric = answer.IsNumeric.HasValue && answer.IsNumeric.Value;
 
         var checkBoxName = string.Format("Answer_{0}", answer.AnswerCode);
         
